--- a/fhdwbeamer.sty
+++ b/fhdwbeamer.sty
@@ -1,61 +1,33 @@
 \NeedsTeXFormat{LaTeX2e}[1994/06/01]
 \ProvidesPackage{fhdwbeamer}[2022/09/16 LaTeX Beamer Template for FHDW]
 
-\RequirePackage{ifthen}
-
-\newboolean{exam@progra}
-\setboolean{exam@progra}{false}
-
-\newboolean{exam@retake}
-\setboolean{exam@retake}{false}
-
-\newboolean{exam@calculator}
-\setboolean{exam@calculator}{false}
-
-\newboolean{exam@othertools}
-\setboolean{exam@othertools}{false}
-
-
-%% Article options
-%\DeclareOption{10pt}{
-%  \PassOptionsToClass{\CurrentOption}{article}
-%}
-
-% Custom package options
-\DeclareOption{progra}{
- \setboolean{exam@progra}{true}
-}
-\DeclareOption{retake}{
- \setboolean{exam@retake}{true}
-}
-\DeclareOption{calculator}{
- \setboolean{exam@calculator}{true}
-}
-
-% Fallback
 \DeclareOption*{
- \PackageWarning{tosexam}{Unknown option '\CurrentOption'}
+ \PackageWarning{fhdwbeamer}{Unknown option '\CurrentOption'}
 }
 
-%% Execute default options
-%\ExecuteOptions{10pt}
-
-% Process given options
 \ProcessOptions\relax
 
-%% Load base
-%\LoadClass[a4paper]{article}
-
-%% Load additional packages and commands.
 \RequirePackage[ngerman]{babel}
 \RequirePackage[T1]{fontenc}
 \RequirePackage{graphicx}
 \RequirePackage{xcolor}
 \RequirePackage{uarial}
+\RequirePackage[calc]{datetime2}
 \RequirePackage{tikz}
 \usetikzlibrary{arrows,shapes,chains,matrix,positioning,scopes,decorations,shadows,calc,trees,backgrounds}
 
+% beamer and enumitem have compatibility issues; let's solve them somehow
+\let\olddescription\description
+\let\oldenddescription\enddescription
+\RequirePackage{enumitem}
+\let\description\olddescription
+\let\enddescription\oldenddescription
+\setenumerate{leftmargin=7mm,label=\arabic*.}
+\setitemize{leftmargin=5.5mm,label=\usebeamerfont*{itemize item}\usebeamercolor[fg]{itemize item}\usebeamertemplate{itemize item}}
+\setlist{itemindent=0pt, listparindent=0pt, labelsep=4mm}
+
 \renewcommand{\familydefault}{\sfdefault}
+\renewcommand{\date}[1]{\DTMsavedate{fhdwdate}{#1}\DTMmakeglobal{fhdwdate}}
 
 \definecolor{fhdwblue}{RGB}{33,55,105}
 \definecolor{fhdworange}{RGB}{245,146,3}
@@ -64,49 +36,58 @@
 \colorlet{fhdwlightgray}{black!20}
 \colorlet{fhdwgreen}{green!60!black}
 
-\newcommand{\insertauthorpic}{\includegraphics[width=1.446cm]{me.png}}
-\newcommand{\footertext}{%
-  \fontsize{5}{5}\selectfont\begin{minipage}{3mm}\vspace*{-1pt}\raggedleft\insertframenumber\end{minipage}\hspace*{3mm}
-  © FHDW.\hspace*{3mm}\insertshortauthor{}: \inserttitle{}
+\newcommand{\footertext}{\tiny\textbf{\insertshorttitle, \insertauthor}}
+\newcommand{\datetext}{\DTMsetdatestyle{ddm}\begin{minipage}{3cm}\tiny\textbf{\DTMusedate{fhdwdate}}\\\textbf{\DTMfetchyear{fhdwdate}}\end{minipage}}
+\DTMnewdatestyle{ddm}{%
+\renewcommand*{\DTMdisplaydate}[4]{%
+##3.\ \DTMmonthname{##2}}%
+\renewcommand*{\DTMDisplaydate}{\DTMdisplaydate}%
 }
-\newcommand{\datesize}{\fontsize{10}{10}\selectfont}
 
 
 \mode<presentation>
 {
-% \setbeamerfont{block title}{size={}}
-% \usefonttheme{professionalfonts} % using non standard fonts for beamer
-% \usefonttheme{sans} % default family is serif
 \setbeamercovered{transparent}
 \setbeamertemplate{navigation bars}{}
 \setbeamertemplate{navigation symbols}{}
-\setbeamersize{text margin left=4mm}
-\setbeamersize{text margin right=4mm}
-\setbeamertemplate{itemize items}[circle]
-% \setbeamertemplate{enumerate items}[none]
+\setbeamertemplate{itemize items}{\raisebox{0.8mm}{\tiny$\bullet$}}
+\setbeamercolor{itemize item}{fg=black}
+\setbeamercolor{enumerate item}{fg=black}
 \setbeamertemplate{headline}{}
 \setbeamertemplate{footline}{
   \begin{tikzpicture}[remember picture,overlay]
-  \shade[shading=axis,bottom color=white,top color=white,middle color=fhdwlightgray,shading angle=0] ($(current page.south west)+(0.6,0.56)$) rectangle ($(current page.south east)+(-3.5,0.62)$);
-  \draw[fhdworange] ($(current page.south west)+(0.6,0.6)$) -- ($(current page.south east)+(-3.5,0.6)$);
-  \node (logosmall) at ($(current page.south east)+(-0.3,0.0)$) [anchor=south east] {\includegraphics[height=5mm]{fhdwlogo.png}};
-  \node[fhdwblue] (textline) at ($(current page.south west)+(0.8,0.13)$) [anchor=south west] {\footertext{}};
+  \shade[shading=axis,bottom color=white,top color=white,middle color=fhdwlightgray,shading angle=0] ($(current page.south west)+(0.4,0.66)$) rectangle ($(current page.south east)+(-0.4,0.72)$);
+  \draw[fhdworange] ($(current page.south west)+(0.4,0.7)$) -- ($(current page.south east)+(-0.4,0.7)$);
+  \node (logosmall) at ($(current page.south east)+(-0.3,0.0)$) [anchor=south east] {\includegraphics[height=4.5mm]{fhdwlogo.png}};
+  \node[fhdwblue] (slidenumber) at ($(current page.south west)+(0.35,0.5)$) [anchor=north west] {\tiny\insertframenumber{}};
+  \node[fhdwblue] (textline) at ($(current page.south west)+(1.1,0.5)$) [anchor=north west] {\footertext{}};
+  \draw[fhdworange,thick] ($(current page.south west)+(0.8,0.24)$) -- ($(current page.south west)+(0.8,0.44)$);
+  \node[fhdwblue] (date) [right=8 of textline.west,anchor=west] {\datetext{}};
   \end{tikzpicture}
 }
 \defbeamertemplate*{title page}{fhdw}[1][]{
   \begin{tikzpicture}[remember picture,overlay]
+  \shade[shading=axis,bottom color=white,top color=white,middle color=fhdwgray,shading angle=0] ($(current page.south west)+(0.0,2.0)$) rectangle ($(current page.south east)+(0.0,2.2)$);
+  \fill[fhdwblue] (current page.north west) rectangle ($(current page.north east)+(0.0,-7.5)$);
   \node (logo) at ($(current page.south east)+(-0.5,0.2)$) [anchor=south east] {\includegraphics[height=12mm]{fhdwlogo.png}};
-  \node[white] (title) at ($(logo)+(-0.7,0.65)$) [anchor=south west] {\fontsize{20}{16}\selectfont\textbf{\inserttitle}\par};
-  \node[white] (date) [below=of title.west,anchor=west] {\datesize\insertdate,};
-  \node[white] (place) [below=0.42 of date.west,anchor=west] {};
-  \node[white] (authorpic) [below=0.2 of place.south west,anchor=north west] {};
-  \node[white] (author) [right=0.1 of authorpic.south east,anchor=south west] {\datesize\selectfont\insertauthor};
-  \node[white] (textline) at ($(current page.south west)+(0.8,0.13)$) [anchor=south west] {\footertext{}};
+  \node[fhdworange] (title) at (current page.center) [anchor=south] {\begin{minipage}{\textwidth}\begin{center}\Huge\textbf{\inserttitle}\end{center}\end{minipage}};
+  \node[white] (subtitle) [below=0.3 of title.south,anchor=north] {\begin{minipage}{\textwidth}\begin{center}\Large\insertsubtitle\end{center}\end{minipage}};
+  \node[fhdwblue] (slidenumber) at ($(current page.south west)+(0.33,0.55)$) [anchor=north west] {\tiny\insertframenumber{}};
+  \node[fhdwblue] (textline) at ($(current page.south west)+(1.042,0.55)$) [anchor=north west] {\footertext{}};
+  \draw[fhdworange,thick] ($(current page.south west)+(0.8,0.24)$) -- ($(current page.south west)+(0.8,0.44)$);
+  \node[fhdwblue] (date) [right=6.5 of textline.west,anchor=west] {\datetext{}};
   \end{tikzpicture}
 }
 \defbeamertemplate*{frametitle}{fhdw}[1][]{
+  \vskip3mm%
+  \begin{minipage}[t]{\textwidth}\LARGE\textbf{\textcolor{fhdworange}{\insertframetitle}}\end{minipage}
   \vskip2mm%
-  \hspace*{3mm}\fontsize{16}{12}\selectfont\textbf{\textcolor{fhdwblue}{\insertframetitle}}
+  \begin{minipage}[t]{\textwidth}\large\textcolor{fhdwblue}{\insertframesubtitle}\end{minipage}
 }
 }
 
+\def\ps@navigation@titlepage{%
+  \setbeamertemplate{footline}{}
+  \@nameuse{ps@navigation}
+}
+\addtobeamertemplate{title page}{\thispagestyle{navigation@titlepage}}{}
