--- a/fhdwbeamer.sty
+++ b/fhdwbeamer.sty
@@ -12,6 +12,8 @@
 \RequirePackage{graphicx}
 \RequirePackage{xcolor}
 \RequirePackage{uarial}
+\RequirePackage{hyperref}
+\RequirePackage{tcolorbox}
 \RequirePackage[calc]{datetime2}
 \RequirePackage{tikz}
 \usetikzlibrary{arrows,shapes,chains,matrix,positioning,scopes,decorations,shadows,calc,trees,backgrounds}
