add multicol package

--- a/fhdwbeamer.sty
+++ b/fhdwbeamer.sty
@@ -15,6 +15,7 @@
 \RequirePackage{hyperref}
 \RequirePackage{tcolorbox}
 \RequirePackage[calc]{datetime2}
+\RequirePackage{multicol}
 \RequirePackage{tikz}
 \usetikzlibrary{arrows,shapes,chains,matrix,positioning,scopes,decorations,shadows,calc,trees,backgrounds}
 
