use utility package

--- a/fhdwbeamer.sty
+++ b/fhdwbeamer.sty
@@ -7,17 +7,9 @@
 
 \ProcessOptions\relax
 
-\RequirePackage[ngerman]{babel}
-\RequirePackage[T1]{fontenc}
-\RequirePackage{graphicx}
-\RequirePackage{xcolor}
-\RequirePackage{uarial}
-\RequirePackage{hyperref}
+\RequirePackage{fhdwutil}
 \RequirePackage{tcolorbox}
 \RequirePackage[calc]{datetime2}
-\RequirePackage{multicol}
-\RequirePackage{tikz}
-\usetikzlibrary{arrows,shapes,chains,matrix,positioning,scopes,decorations,shadows,calc,trees,backgrounds}
 
 % beamer and enumitem have compatibility issues; let's solve them somehow
 \let\olddescription\description
