resolve option clash

--- a/fhdwbeamer.sty
+++ b/fhdwbeamer.sty
@@ -8,6 +8,7 @@
 \ProcessOptions\relax
 
 \RequirePackage{fhdwutil}
+\RequirePackage{xcolor}
 \RequirePackage{tcolorbox}
 \RequirePackage[calc]{datetime2}
 
