avoid package clash with xcolor

--- a/fhdwbeamer.sty
+++ b/fhdwbeamer.sty
@@ -11,6 +11,8 @@
 \RequirePackage{xcolor}
 \RequirePackage{tcolorbox}
 \RequirePackage[calc]{datetime2}
+\RequirePackage{tikz}
+\usetikzlibrary{arrows,shapes,chains,matrix,positioning,scopes,decorations.pathmorphing,decorations.pathreplacing,shadows,calc,trees}
 
 % beamer and enumitem have compatibility issues; let's solve them somehow
 \let\olddescription\description
